--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Ígor Pedro Leitão Mascarenhas Martins",
   "license": "MIT",
   "dependencies": {
+    "@auth0/nextjs-auth0": "^0.11.0",
     "next": "^9.3.5",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
