--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "firebase-admin": "^8.11.0",
     "geofirestore": "^3.4.1",
+    "isomorphic-fetch": "^2.2.1",
     "next": "^9.3.5",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
